form-runner/jvm/src/main/assets/xbl/orbeon/fields-date/fields-date.less
@import (reference) "../../../../../../../../bootstrap-src/less/variables";

.xbl-fr-fields-date {

    .fr-component-group {
        display: inline-block;
        img { vertical-align: middle; }
        .xforms-input {

            // All the inputs on the same line
            display: inline-block;

            // Don't show placeholders as they are too large and get truncated
            input::placeholder {
                color: transparent;
            }
            // By default, don't show labels, but don't hide to screen readers
            // Particularly strong rule for Form Builder, to override its `display: table`
            .fr-view &.xforms-control .xforms-label, // add `.fr-view` because `.fr-density-*` on that same element has a `display` property and we need to override it
            .fb-main .fb &.xforms-control .xforms-label {
                overflow : hidden;
                display  : block;
                height   : 0;
                width    : 0;
                margin   : 0;
            }
        }
        .xbl-fr-date {
            input { display: none ; }
            display: inline-block;
            vertical-align: middle;
            .add-on {
                // Rounded corners on all sides, not just right side
                border-radius: @inputBorderRadius;
            }
        }
    }

    // For use outside of Form Runner
    .fr-width-2digits .xforms-input-input { width: 30px }
    .fr-width-4digits .xforms-input-input { width: 47px }
}

